<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="40dp"
    android:gravity="start|center">

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/video_quality"
       android:textColor="@color/black"
       android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/sd_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginEnd="10dp"
            android:text="@string/standard_definition"
            android:textColor="@android:color/black"/>

        <RadioButton
            android:id="@+id/hd_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/high_definition"
            android:textColor="@android:color/black"/>
    </RadioGroup>

    <CheckBox
        android:id="@+id/audio_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/radio_group"
        android:layout_toRightOf="@+id/radio_group"
        android:checked="true"
        android:text="@string/audio"
        android:textColor="@android:color/black"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_selector"
            android:paddingBottom="@dimen/padding_vertical"
            android:paddingLeft="@dimen/padding_horizontal"
            android:paddingRight="@dimen/padding_horizontal"
            android:paddingTop="@dimen/padding_vertical"
            android:text="@string/start_recording"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_20"
            tools:text="@string/start_recording"/>

        <TextView
            android:id="@+id/button_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_selector"
            android:paddingBottom="@dimen/padding_vertical"
            android:paddingLeft="@dimen/padding_horizontal"
            android:paddingRight="@dimen/padding_horizontal"
            android:paddingTop="@dimen/padding_vertical"
            android:text="@string/stop_recording"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_20"
            tools:text="@string/stop_recording"/>

    </LinearLayout>

</LinearLayout>
</layout>